--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /node_modules
 /public/hot
 /public/storage
-/public/js/app.js
+/public/js
+/public/css
+/public/fonts
 /storage/*.key
 /vendor
 /.idea
