--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
+    "vue-i18n": "^7.6.0",
     "vue-router": "^3.0.1"
   }
 }
