admin and manager site

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/home/app.js": "/js/home/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/manager/app.js": "/js/manager/app.js",
+    "/js/admin/app.js": "/js/admin/app.js"
 }
