Replace manager to poster

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/js/home/app.js": "/js/home/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/manager/app.js": "/js/manager/app.js",
+    "/js/poster/app.js": "/js/poster/app.js",
     "/js/admin/app.js": "/js/admin/app.js"
 }
